# edn

./: .gitignore  .travis.yml  AndroidManifest.xml  Application.mk  CMakeLists.txt  Makefile  Makefile.py  README  README.md  avancement.boo  ctags.sh  doxygen.dox  edn.jks  generateAllRelease.sh  index.html  install.sh  licence.txt  license.txt  local.properties  lutinBase.py  lutin_edn.py  modele.css  script.js  tags  test2.c  test_transparence.c  todo.txt
Android/: build.xml  local.properties
Sources/: Android.mk  Config.in  Linux.mk  Windows.mk  file.mk  init.cpp
assets/: color_white.xml  lang_c.xml  lang_in.xml  lang_java.xml  lang_lua.xml  lang_xml.xml
config/: Android.config  Android_release.config  Linux.config  Linux_debug.config  Linux_release.config  MacOs.config  Windows.config  Windows_debug.config
data/: GUI-Parameter-global.xml  GUI-Search.xml  cedit.fbp  color_black.xml  config.xml  edn.desktop  icon.icns  lang_Makefile.xml  lang_asm.xml  lang_bash.xml  lang_boo.xml  lang_c.xml  lang_matlab.xml  lang_php.xml  lang_xml.xml  parsingRegExp.txt  projectEx.xml
jni/: Android.mk  Linux.mk  file.mk
os-Android/: AndroidManifest.xml
os-Linux/: README
sources/: Android.mk  CMakeLists.txt  Linux.mk  MacOs.mk  Makefile_edn.py  Windows.mk  edn_Linux.py  file.mk  lutin_edn.py  monk_edn.py  tag
sources/appl/: Buffer.cpp  Buffer.h  Buffer.hpp  BufferManager.cpp  BufferManager.h  BufferManager.hpp  Debug.cpp  Debug.h  GlyphDecoration.cpp  GlyphDecoration.h  GlyphDecoration.hpp  GlyphPainting.cpp  GlyphPainting.h  GlyphPainting.hpp  Highlight.cpp  Highlight.h  Highlight.hpp  HighlightManager.cpp  HighlightManager.h  HighlightManager.hpp  HighlightPattern.cpp  HighlightPattern.h  HighlightPattern.hpp  TextPlugin.cpp  TextPlugin.h  TextPlugin.hpp  TextPluginAutoIndent.cpp  TextPluginAutoIndent.h  TextPluginAutoIndent.hpp  TextPluginCopy.cpp  TextPluginCopy.h  TextPluginCopy.hpp  TextPluginCtags.cpp  TextPluginCtags.h  TextPluginCtags.hpp  TextPluginData.h  TextPluginData.hpp  TextPluginHistory.cpp  TextPluginHistory.h  TextPluginHistory.hpp  (+20 more)
sources/appl/Buffer/: Buffer.cpp  Buffer.h  BufferEmpty.cpp  BufferEmpty.h  BufferManager.cpp  BufferManager.h  BufferText.cpp  BufferText.h  EdnVectorBuf.h  TextPlugin.cpp  TextPluginAutoIndent.cpp  TextPluginAutoIndent.h  TextPluginCopy.cpp  TextPluginCopy.h  TextPluginHistory.cpp  TextPluginHistory.h  TextPluginManager.cpp  TextPluginManager.h  TextPluginMultiLineTab.cpp  TextPluginMultiLineTab.h
sources/appl/Buffer/EdnBuf/: EdnBuf.cpp  EdnBuf.h  EdnBufHistory.cpp  EdnBufHistory.h  EdnBuf_HighLight.cpp  EdnBuf_History.cpp  EdnBuf_Selection.cpp
sources/appl/Colorize/: Colorize.cpp  Colorize.h  ColorizeManager.cpp  ColorizeManager.h
sources/appl/Gui/: BufferView.cpp  BufferView.h  BufferView.hpp  CodeView.cpp  CodeView.h  MainWindows.cpp  MainWindows.h  MainWindows.hpp  Search.cpp  Search.h  Search.hpp  SearchData.cpp  SearchData.h  TagFileList.cpp  TagFileList.h  TagFileList.hpp  TagFileSelection.cpp  TagFileSelection.h  TagFileSelection.hpp  TextViewer.cpp  TextViewer.h  TextViewer.hpp  ViewerManager.cpp  ViewerManager.h  ViewerManager.hpp  WorkerCloseAllFile.cpp  WorkerCloseAllFile.h  WorkerCloseAllFile.hpp  WorkerCloseFile.cpp  WorkerCloseFile.h  WorkerCloseFile.hpp  WorkerSaveAllFile.cpp  WorkerSaveAllFile.h  WorkerSaveAllFile.hpp  WorkerSaveFile.cpp  WorkerSaveFile.h  WorkerSaveFile.hpp
sources/appl/Highlight/: Highlight.cpp  Highlight.h  HighlightManager.cpp  HighlightManager.h  HighlightPattern.cpp  HighlightPattern.h
sources/appl/ctags/: CTagsManager.cpp  CTagsManager.h  readtags.cpp  readtags.h  readtags.hpp
sources/appl/glyphDecoration/: GlyphDecoration.cpp  GlyphPainting.cpp  GlyphPainting.h
sources/appl/widget/: BufferList.cpp  BufferList.hpp  BufferTree.cpp  BufferTree.hpp
test/: CMakeLists.txt  cpp.cpp  example.css  php.php  python.py  vertexShader.frag  xml.xml
(+335 files in other folders)
